--- a/CSS/Selectors/Link Pseudo-classes/index.html
+++ b/CSS/Selectors/Link Pseudo-classes/index.html
@@ -5,11 +5,11 @@
     <title>Fashion Blog</title>
   </head>
   <body>
-    <div>
+    <div id="blog">
       <h1>The Latest Trends in Fashion</h1>
       <p>High fashion is constantly evolving...</p>
 
-      <div>
+      <div class="related-articles">
         <h2>Related Articles</h2>
         <ul>
           <li><a href="#summer-trdendsss">Summer Fashion Trends</a></li>
