--- a/CSS/Selectors/User action Pseudo-classes/index.html
+++ b/CSS/Selectors/User action Pseudo-classes/index.html
@@ -5,7 +5,7 @@
     <title>Newsletter Signup</title>
   </head>
   <body>
-    <div>
+    <div id="box">
       <h1>Stay Updated!</h1>
       <p>Subscribe to our newsletter for the latest updates and offers.</p>
       <form action="/submit" method="post">
