Adding more JS Files

--- a/DOM/19.getAttribute/index.html
+++ b/DOM/19.getAttribute/index.html
@@ -14,7 +14,7 @@
       <img
         style="height: 100px"
         src="https://cdn.pixabay.com/photo/2016/12/16/15/25/christmas-1911637_1280.jpg"
-        data-author="Alice"
+        data-author="Bob"
       />
       <img
         style="height: 100px"
