--- a/DOM/20.createElement/index.html
+++ b/DOM/20.createElement/index.html
@@ -36,6 +36,8 @@
     <div id="container">
       <h2>Dynamic To-Do</h2>
       <!-- Tasks will be appended here -->
+      <input type="text" id="textInput" placeholder="Enter text here">
+      <button onclick="createTask()">Submit</button>
     </div>
     <script src="script.js"></script>
   </body>
